Fixed sidebar spacing

--- a/source/stylesheets/application/_layout.scss
+++ b/source/stylesheets/application/_layout.scss
@@ -21,7 +21,7 @@
   }
 
   @include grid-media($desktop-wide) {
-    @include grid-column(10);
+    @include grid-column(9);
   }
 }
 
@@ -93,6 +93,6 @@
   }
 
   @include grid-media($desktop-wide) {
-    @include grid-column(2);
+    @include grid-column(3);
   }
 }
