--- a/source/stylesheets/application/_sidebar.scss
+++ b/source/stylesheets/application/_sidebar.scss
@@ -5,10 +5,12 @@
   padding-top: 30px;
 
   iframe {
-    margin-bottom: 20px;
+    display: block;
+    margin: 0 auto 20px;
   }
 
   img {
-    margin-bottom: 40px;
+    display: block;
+    margin: 0 auto 40px;
   }
 }
